# birdy

./: Cargo.toml  README.md
src/: main.rs  systems.rs
src/plugins/: window.rs
src/systems/: bird.rs  error.rs  obstacles.rs  setup.rs
