[package]
name = "birdy"
# Epoch Semver = {Epoch * 1000 + Major}.Minor.Patch
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.2"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy_dylib = { version = "0.15.0-rc.3" }
 winit = { version = "0.30.9", features = ["wayland"] }



[profile.dev]
codegen-backend = "cranelift"


[profile.dev.package."*"]
codegen-backend = "llvm"
opt-level = 3

